# ndbx-lab

./: .env.local  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
scripts/cassandra/: init-cluster.sh  schema.cql
scripts/mongodb/: init-cluster.sh
scripts/neo4j/: init-graph.sh  schema.cypher
src/app/: config.py  main.py  routers.py  service.py  user_session.py
src/app/api/: common.py  schemas.py
src/app/api/auth/: handler.py
src/app/api/events/: handler.py
src/app/api/healthz/: handler.py
src/app/api/recommendations/: handler.py
src/app/api/reviews/: handler.py
src/app/api/session/: handler.py
src/app/api/users/: handler.py
src/app/auth/: service.py
src/app/cassandra/: bootstrap.py
src/app/events/: service.py  store.py
src/app/mongodb/: bootstrap.py
src/app/reactions/: cache.py  service.py  store.py
src/app/recommendations/: bootstrap.py  cache.py  service.py  store.py
src/app/reviews/: cache.py  service.py  store.py
src/app/session/: bootstrap.py  service.py  store.py  types.py
src/app/users/: service.py  store.py
src/tools/: api_smoke_environment.json  api_tests_collection.json
